# coursework

./: .env.example  README.md  main.py  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
